--- a/templates/dashboard_client_find.html
+++ b/templates/dashboard_client_find.html
@@ -4,32 +4,7 @@
     <meta charset="utf-8" />
     <title>IPM - Procurar cliente</title>
 
-    <script type="text/javascript">
-      function load_clients() {
-         var clientul = document.getElementById('client_search').getElementsByTagName('ul')[0];
-         var clientname = document.getElementById('client_name').value;
-         var xhttp = new XMLHttpRequest();
-         xhttp.onreadystatechange = function() {
-            if (this.readyState == 4 && this.status == 200) {
-                clients = JSON.parse(this.responseText);
-                console.log(clients)
-
-                clientul.innerHTML = "";
-      
-                for(var i = 0; i < clients.length; i++) {
-                    var li = document.createElement("li");
-		    var li_text = document.createTextNode(clients[i].name);
-		    li.appendChild(li_text);
-                    clientul.appendChild(li);
-		}
-      
-            }
-         };
-				   
-         xhttp.open("GET", " {{ url_for('search_client') }}?name=" + clientname,
-true);
-         xhttp.send();
-      }
+    <script type="text/javascript" src="{{ url_for('static', filename='utils.js') }}">
     </script>
     
   </head>
