Added client addition to the interface

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -24,7 +24,7 @@
 	  <input type="submit" value="Pesquisar" />
 	</form>
 	<div id="client_search"><ul></ul></div>
-	<a href="#"> Adicionar cliente </a>
+	<a href=" {{ url_for('dashboard_client_add') }}"> Adicionar cliente </a>
       </div>
     </article>
     
