--- a/templates/dashboard_client_add.html
+++ b/templates/dashboard_client_add.html
@@ -10,6 +10,7 @@
 
   <body>
     <header>
+      <a href=" {{ url_for('show_dashboard') }} ">Back to Dashboard</a>
       <span id="name">NAME</span> |
       <a href=" {{ url_for('logout') }} ">Logout</a>
     </header>
