--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,32 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>IPM - International Punishment Machines</title>
+
+    <style type="text/css">
+
+      body {
+      font-family: Arial, sans-serif;
+      font-size: 1em;
+      }
+      
+      #navbar {
+      display: table;
+      width: 100%;
+      border-bottom: 1px solid black
+      
+      }
+
+      #navbar #login {
+      padding-bottom: 0.5em;
+      }
+
+      #navbar #login form {
+      display: inline;
+      }
+    </style>
+    
   </head>
   <body>
     <div id="navbar">
