--- a/templates/dashboard_client.html
+++ b/templates/dashboard_client.html
@@ -1,27 +1,8 @@
-<!DOCTYPE html5>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>IPM - Detalhes do cliente</title>
-
-    <script type="text/javascript" src="{{ url_for('static', filename='utils.js') }}">
-    </script>
-    
-  </head>
-  <body onload="load_client( {{ client_id  }}  )">
-    <header>
-      <a href=" {{ url_for('show_dashboard') }} ">Back to Dashboard</a>
-      <span id="name">NAME</span> |
-      <a href=" {{ url_for('logout') }} ">Logout</a>
-    </header>
-
-    <article>
+{% extends "base.html" %}
+{% block main %}
       <h1>Dados do cliente</h1>
       <p>Nome: <span id="client_name"></span></p>
       <hr />
       <p><a href=" {{ url_for('get_license_file',clientid=client_id) }}  "> Baixar arquivo de licença </a></p>
-      
-    </article>
-    
-  </body>  
-</html>
+
+{% endblock %}
