--- a/templates/dashboard_client_add.html
+++ b/templates/dashboard_client_add.html
@@ -1,32 +1,11 @@
-<!DOCTYPE html5>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>IPM - Adicionar cliente</title>
-    
-    <script type="text/javascript" src="{{ url_for('static', filename='utils.js') }}"></script>
+{% extends "base.html" %}
+{% block main %}
+<div id="client_status"></div>
 
-  </head>
-
-  <body>
-    <header>
-      <a href=" {{ url_for('show_dashboard') }} ">Back to Dashboard</a>
-      <span id="name">NAME</span> |
-      <a href=" {{ url_for('logout') }} ">Logout</a>
-    </header>
-
-    <article>
-      <div id="client_status"></div>
-      
-      <h1>Adicionar cliente</h1>
-      <form>
-	<p><input type="text" id="cli_name" placeholder="Nome" /></p>
-
-	<input type="button" value="Adicionar" onclick="add_client()" />
-      </form>
-      
-    </article>
-
-  </body>
-
-</html>
+<h1>Adicionar cliente</h1>
+<form>
+  <p><input type="text" id="cli_name" placeholder="Nome" /></p>
+  
+  <input type="button" value="Adicionar" onclick="add_client()" />
+</form>
+{% endblock %}
